--- a/styles.css
+++ b/styles.css
@@ -38,15 +38,16 @@ body {
 }
 #footer {
 	background-color: #000000;
-	position: relative;
-	height: 180px;
 	position: static;
+	height: 180px;
+	position: absolute;
 	width: 99.5%;
 	text-align: center;
 	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif;
-	top: 147px;
+	top: 1845px;
 	float: left;
 	margin-top: -6px;
+	color: #FCF9F9;
 }
 a {
 	text-decoration: none;
@@ -676,4 +677,11 @@ image body {
 #body1 #welcome #welcome_title {
 	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif;
 	font-size: 30px;
+}
+.image5 {
+	position: absolute;
+	top: 72px;
+	width: 1693px;
+	height: 1693px;
+	opacity: 0.89;
 }
