--- a/styles.css
+++ b/styles.css
@@ -39,15 +39,14 @@ body {
 #footer {
 	background-color: #000000;
 	position: static;
-	height: 180px;
+	height: 190px;
 	position: absolute;
 	width: 99.5%;
 	text-align: center;
 	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif;
-	top: 1845px;
-	float: left;
-	margin-top: -6px;
+	margin-top: 338px;
 	color: #FCF9F9;
+	margin-left: -2px;
 }
 a {
 	text-decoration: none;
@@ -86,8 +85,7 @@ a:hover, a:active, a:focus {
 	padding-top: 16px;
 	color: #FFFFFF;
 }
-
-#wrapper #content #top {
+#wrapper #header  {
 	position: absolute;
 	top: 0px;
 	width: 0px;
@@ -103,6 +101,7 @@ a:hover, a:active, a:focus {
 	background-position: 13% 61%;
 	max-height: 100%;
 	font-style: normal;
+	margin-top: -146px;
 }
 #BUY_TICKETS {
 	left: 0px;
@@ -125,15 +124,14 @@ a:hover, a:active, a:focus {
 	background-color: #000000;
 	border-color: #000000;
 }
-
-#content #top img {
+#header img  {
 	margin-left: 19px;
 	margin-top: -6px;
 
 
 
 }
-#content #top #PLAY_FOR_US {
+#header #PLAY_FOR_US  {
 	color: #FFFFFF;
 	border-color: #FFFFFF;
 	border-style: solid;
@@ -146,12 +144,12 @@ a:hover, a:active, a:focus {
 	text-align: center;
 	border-radius: 10px;
 }
-#content #top #PLAY_FOR_US:hover{
+#header #PLAY_FOR_US:hover{
 	color: #FFFFFF;
 	background-color: #000000;
 	border-color: #000000;
 }
-#content #top #BECOME_A_MEMBER {
+#header #BECOME_A_MEMBER  {
 	color: #FFFFFF;
 	width: 250px;
 	border-style: solid;
@@ -165,12 +163,12 @@ a:hover, a:active, a:focus {
 	border-radius: 10px;
 	position: relative;
 }
-#content #top #BECOME_A_MEMBER:hover{
+#header #BECOME_A_MEMBER:hover{
 	color: #FFFFFF;
 	background-color: #000000;
 	border-color: #000000;
 }
-#content #top #BECOME_A_VOLUNTEER {
+#header #BECOME_A_VOLUNTEER  {
 	color: #FFFFFF;
 	border-style: solid;
 	border-color: #FFFFFF;
@@ -184,7 +182,7 @@ a:hover, a:active, a:focus {
 	border-radius: 10px;
 	position: relative;
 }
-#content #top #BECOME_A_VOLUNTEER:hover{
+#header #BECOME_A_VOLUNTEER:hover{
 	color: #FFFFFF;
 	background-color: #000000;
 	border-color: #000000;
@@ -271,6 +269,8 @@ image body {
 	color: #FFFFFF;
 	text-align: left;
 	margin-left: -25px;
+	margin-top: -839px;
+	z-index: 1;
 }
 #wrapper #body1 #welcome1 {
 	font-family: "Minion Pro";
@@ -284,18 +284,14 @@ image body {
 	color: #FFFFFF;
 	text-align: left;
 }
-#wrapper #welcome_img {
-	padding-top: 147px;
-	opacity: 0.65;
-}
 #wrapper #artists_background0 {
 	padding-top: 147px;
 	opacity: 0.65;
 }
 #body1 #welcome #BECOME_A_VOLUNTEER_1 {
 	width: 300px;
-	border-style: solid;
 	border-color: #FFFFFF;
+	border-style: solid;
 	border-radius: 10px;
 	margin-top: 35px;
 	margin-left: 66px;
@@ -303,6 +299,8 @@ image body {
 	margin-bottom: -69px;
 	padding-top: 10px;
 	padding-bottom: 10px;
+	font-size: 25px;
+	color: #FFFFFF;
 }
 #body1 #welcome #PLAY_FOR_US_1 {
 	width: 300px;
@@ -311,15 +309,16 @@ image body {
 	border-radius: 10px;
 	margin-left: 467px;
 	text-align: center;
-	margin-top: 5px;
+	margin-top: 11px;
 	padding-top: 10px;
 	padding-bottom: 10px;
 	margin-bottom: 30px;
+	font-size: 25px;
 }
 #body1 #welcome #BECOME_A_VOLUNTEER_1:hover  {
 	width: 300px;
 	border-style: solid;
-	border-color: #000000;
+	border-color: #FFFFFF;
 	border-radius: 10px;
 	margin-top: 35px;
 	margin-left: 66px;
@@ -327,35 +326,33 @@ image body {
 	margin-bottom: -69px;
 	padding-top: 10px;
 	padding-bottom: 10px;
-	color: #000000;
 	background-color: #FFFFFF;
 }
 #body1 #welcome #PLAY_FOR_US_1:hover  {
 	width: 300px;
-	border-color: #000000;
+	border-color: #FFFFFF;
 	border-style: solid;
 	border-radius: 10px;
-	margin-left: 467px;
 	text-align: center;
-	margin-top: 5px;
 	padding-top: 10px;
 	padding-bottom: 10px;
-	color: #000000;
 	background-color: #FFFFFF;
+	margin-top: 11px;
 	margin-bottom: 30px;
+	margin-left: 467px;
 }
 #body1 #welcome #body1_bottom_text {
 	margin-top: 11px;
 	text-align: left;
-	font-size: 25px;
+	font-size: 30px;
 }
 #body1 #welcome #body1_top_text {
 	margin-top: -15px;
-	font-size: 25px;
+	font-size: 30px;
 }
 #wrapper #body2 #body2_background_img {
 	margin-left: 1019px;
-	margin-top: -605px;
+	margin-top: -591px;
 }
 #wrapper #body2 {
 	color: #000000;
@@ -363,12 +360,13 @@ image body {
 	padding-top: 0px;
 	float: left;
 	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif;
+	margin-top: 29px;
 
 
 
 }
 #wrapper #body2 #body2_text1 {
-	margin-top: -608px;
+	margin-top: -618px;
 	color: #FFFFFF;
 	text-align: right;
 	margin-right: 32px;
@@ -386,7 +384,7 @@ image body {
 #wrapper #body2 #body2_text2 {
 	color: #FFFFFF;
 	font-size: large;
-	margin-top: 452px;
+	margin-top: 462px;
 	text-align: right;
 	margin-right: 29px;
 	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif;
@@ -426,8 +424,9 @@ image body {
 #wrapper #body3_background {
 	position: static;
 	float: left;
-	margin-top: -5px;
 	opacity: 0.4;
+	margin-top: 9px;
+	margin-left: -1px;
 
 }
 #wrapper #artists_background1 {
@@ -583,7 +582,7 @@ image body {
 #wrapper #footer #contact {
 	color: #FFFFFF;
 	text-align: left;
-	margin-top: -14px;
+	margin-top: -21px;
 	margin-left: 15px;
 	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif;
 }
@@ -652,19 +651,19 @@ image body {
 #contact #links1 .nav-link {
 	color: #FFFFFF;
 }
-#content #top #mainnav {
+#header #mainnav  {
 	margin-top: -161px;
 	margin-left: 157px;
 	color: #FFFFFF;
 	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif;
 }
-#content #top #second_nav {
+#header #second_nav  {
 	margin-top: 95px;
 	font-size: 25px;
 	color: #FFFFFF;
 	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif;
 }
-#content #top #header_transparent_background {
+#header #header_transparent_background  {
 	opacity: 0.8;
 	margin-top: -22px;
 	margin-bottom: -256px;
@@ -688,6 +687,7 @@ image body {
 
 body img {
 	top: 15px;
+	opacity: 1;
 }
 .image2 {
 	position: absolute;
@@ -738,4 +738,23 @@ body img {
 	text-align: justify;
 	right: -24px;
 
+}
+#wrapper #body1 {
+	margin-top: 238px;
+	margin-left: 48px;
+	z-index: 1;
+}
+#wrapper #welcome_img {
+
+
+}
+#wrapper #body1 #welcome_img {
+	opacity: 0.5;
+}
+#wrapper #section_body1_background {
+	margin-top: 144px;
+}
+#body1 #welcome #feeder_page_intro_text {
+	font-size: 30px;
+	margin-top: 71px;
 }
